After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684407 - Implicit declaration of function 'gss_rtsp_stream_new'
Implicit declaration of function 'gss_rtsp_stream_new'
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-streaming-server
git master
Other Linux
: Normal normal
: 0.10.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-19 22:19 UTC by Ángel Guzmán Maeso (shakaran)
Modified: 2012-10-02 13:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libgss make and strace output (12.20 KB, text/plain)
2012-09-19 23:55 UTC, Ángel Guzmán Maeso (shakaran)
Details

Description Ángel Guzmán Maeso (shakaran) 2012-09-19 22:19:58 UTC
After this fix https://bugzilla.gnome.org/show_bug.cgi?id=684263

Compiling now I found this error in make:

gss-stream.c: In function 'gss_stream_add_resources':
gss-stream.c:508:7: error: implicit declaration of function 'gss_rtsp_stream_new' [-Werror=implicit-function-declaration]
gss-stream.c:508:27: error: assignment makes pointer from integer without a cast [-Werror]
gss-stream.c:509:7: error: implicit declaration of function 'gss_rtsp_stream_start' [-Werror=implicit-function-declaration]
cc1: all warnings being treated as errors
Comment 1 Tim-Philipp Müller 2012-09-19 22:47:14 UTC
Sorry, should have tested both with and without gst-rtsp headers installed. Hopefully fixed now:

 commit 85e74c7d0184fb133105ffb0220a06e7a83ff9ba
 Author: Tim-Philipp Müller <tim@centricular.net>
 Date:   Wed Sep 19 23:36:33 2012 +0100

    Revert "Fix build when compiling without gst-rtsp-server"
    
    This reverts commit 46776d3a75cf856c490b12587aea3b597b2030c8.
    
    Do this differently.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=684407
Comment 2 Ángel Guzmán Maeso (shakaran) 2012-09-19 23:18:16 UTC
Pulling git now still no luck. This is another bug, but reporting here anyways (for no spamming more bugzilla today):

ew-stream-server.c: In function ‘main’:
ew-stream-server.c:138:5: error: ‘g_thread_init’ is deprecated (declared at /usr/include/glib-2.0/glib/deprecated/gthread.h:259) [-Werror=deprecated-declarations]
cc1: all warnings being treated as errors
make[2]: *** [ew_stream_server-ew-stream-server.o] Error 1

Thanks for you fast fixes Tim ;)
Comment 3 Tim-Philipp Müller 2012-09-19 23:36:42 UTC
commit 77e2d7e2603a8d253e218d17fb331f8aa26ffae3
Author: Tim-Philipp Müller <tim@centricular.net>
Date:   Thu Sep 20 00:35:28 2012 +0100

    g_thread_init() is deprecated with newer GLib versions
    
    Avoid compiler warnings about that.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=684407
Comment 4 Ángel Guzmán Maeso (shakaran) 2012-09-19 23:54:45 UTC
It compiles now, but executing the binary:

/usr/local/bin/ew-stream-server: error while loading shared libraries: libgss-0.10.so.0: cannot open shared object file: No such file or directory

I attach a strace output and the make install log.
Comment 5 Ángel Guzmán Maeso (shakaran) 2012-09-19 23:55:44 UTC
Created attachment 224789 [details]
libgss make and strace output
Comment 6 Tim-Philipp Müller 2012-09-20 00:06:02 UTC
This is almost certainly a setup issue on your end of some sort.

You might need to add /usr/local/lib to /etc/ld.so.conf or so (and run whatever command is needed to update stuff).

You can also try running the binary from the tools/ folder in the source directory without installing.
Comment 7 Ángel Guzmán Maeso (shakaran) 2012-09-20 01:47:09 UTC
I did:
sudo nano /etc/ld.so.conf

Add at the end:
/usr/local/lib

Run:
sudo ldconfig

Then I compile again and I run. It works (I don't know if add this in ld.so.conf should be automatic or make it for the user). It also show a warning with missings cert files (it should be only requested in SSL mode).

(ew-stream-server:25627): libsoup-WARNING **: Could not read SSL certificate from 'server.crt': Failed to open file 'server.crt': No such file or directory

(ew-stream-server:25627): libsoup-WARNING **: Could not read SSL certificate from 'server.crt': Failed to open file 'server.crt': No such file or directory

Then I can access via http://localhost:8080 and login with Mozilla Persona login it redirect to https://localhost:8443/login?redirect_url=/
And it returns a Error 102 (net::ERR_CONNECTION_REFUSED) in Chrome (maybe by the server.crt issue).

After that I see in tools folder the genkey binary (it is not copy in /usr/bin, so I have to run in tools folder too).

I run the server again and I can do the Mozilla BrowserID login. Then it redirect to https://localhost:8443/login?redirect_url=/ but only a blank page is showed. If I press enter on URL it load a new login with user/password.

Then I dig in tools folder. I discover the "config" file, with a admin token. Bu t I don't know what to do more with user/password.

And my main doubt is how to create streams, the archive_dir, programs or features pages like the gstreamer conference video. There are some wiki page or tutorial explaning this?
Comment 8 Tim-Philipp Müller 2012-09-20 09:25:24 UTC
As far as I know, there are no docs or wiki pages yet, sorry.

Closing this bug, since the original issue is now resolved.

Please send a mail to the gstreamer-devel mailing list for general questions.