g_thread_init() is deprecated with newer GLib versions

Avoid compiler warnings about that.

https://bugzilla.gnome.org/show_bug.cgi?id=684407