tools/ew-stream-server.c
@@ -134,8 +134,10 @@ main (int argc, char *argv[])
   GOptionContext *context;
   int i;
 
+#if !GLIB_CHECK_VERSION (2, 31, 0)
   if (!g_thread_supported ())
     g_thread_init (NULL);
+#endif
 
   signal (SIGPIPE, SIG_IGN);
   signal (SIGINT, signal_interrupt);
